[package]
name = "satsetsnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "5.0.0"
image = "0.24.7"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
screenshots = "0.8.5"
